test/libhyperion/syntaxTests/functionTypes/external_functions_with_calldata_args_assigned_to_function_pointers_with_memory_type.hyp
contract C {
    function g(string calldata) external {}

    function main() view external {
        function (string memory) external ptr = this.g;
        ptr;
    }
}
// ----
// TypeError 4888: (102-139): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
